add heading perspective on mousemove

--- a/src/locale/ro.json
+++ b/src/locale/ro.json
@@ -1,6 +1,7 @@
 {
   "Coltisor": "Colțișor",
   "Coltisor © %year%": "Colțișor © %year%",
+  "%star% Coltisor": "%star% Colțișor",
   "Timisoara": "Timișoara",
   "Coltisor Victor - Web Developer": "Colțișor Victor - Web Developer",
   "Welcome to my personal website": "Bine ați venit pe sit-ul meu personal",
